--- a/susan-pilot/Snakefile
+++ b/susan-pilot/Snakefile
@@ -4,6 +4,8 @@ rule all:
 
 # TODO: don't really need exact match for the other seq. could allow some mismatches
 # do all seqs have as much filler as we ask for?
+
+# Step 1: get readname->barcode
 rule proc_read1:
     input:
         "/storage/agoren/susan/pSTR1_S1_L001_R1_001.fastq.gz"
@@ -12,6 +14,7 @@ rule proc_read1:
     shell:
         "./proc_read1.sh {input} > {output}"
 
+# Step 2: extract fastq with variable seq from read 2
 rule proc_read2:
     input:
         "/storage/agoren/susan/pSTR1_S1_L001_R2_001.fastq.gz"
@@ -20,8 +23,7 @@ rule proc_read2:
     shell:
         "./proc_read2.sh {input} > {output}"
 
-# make special bwa ref with the seqs
-# do the alignment
+# Step 3: align with bwa to special reference
 rule align:
     input:
         "barcodes/read2.fq",
@@ -31,14 +33,16 @@ rule align:
     shell:
         "bwa index {input[1]} && bwa mem {input[1]} {input[0]} | samtools view -bS - > {output}"
 
+# Step 4: filter bam file
 rule proc_align:
     input:
         "barcodes/read2.bam"
     output:
         "barcodes/read2_filtered.tab"
     shell:
-        "samtools view {input} | grep -w 135M | cut -f 1,3 > {output}"
+        "samtools view {input} | awk '($6!~/S|H/)' | cut -f 1,3 > {output}"
 
+# Step 5: process filler region
 rule proc_filler:
     input:
         "/storage/agoren/susan/pSTR1_S1_L001_R1_001.fastq.gz"
@@ -47,6 +51,7 @@ rule proc_filler:
     shell:
         "./get_filler.sh {input} > {output}"
 
+# Step 6: merge everything together
 rule merge_tables:
     input:
         "barcodes/read1_filler.tab",
@@ -57,6 +62,7 @@ rule merge_tables:
     shell:
         "./merge_bc_tables.py {input[0]} {input[1]} {input[2]} > {output}"
 
+# Step 7: Aggregate barcode info
 rule filter_table:
     input:
         "barcodes/barcode_assoc_table.tab"
@@ -71,4 +77,4 @@ rule final_table:
     output:
         "barcodes/barcode_assoc_table.pass.tab"
     shell:
-        "cat {input} | grep PASS | cut -d':' -f 1 > {output}"
+        "cat {input} | grep PASS | cut -f 1-2 > {output}"
